5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1674_1107.log
== TEST (2019-04-30 10:26:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= int(input("qual seu numero da semana?"))
y= int(input("qual seu dia do futuro? "))
s=x+y
h=s%7
if(x!=0 and x!=1 and x!=2 and x!=3 and x!=4 and x!=5 and x!=6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	dia="domingo"
elif (x==1):
	dia="segunda"
elif(x==2):
	dia="terca"
elif(x==3):
	dia="quarta"
elif(x==4):
	dia="quinta"
elif(x==5):
	dia="sexta"
elif(x==6):
	dia="sabado"
elif (h==0):
	dia="domingo"
elif (h==1):
	dia="segunda"
elif(h==2):
	dia="terca"
elif(h==3):
	dia="quarta"
elif(h==4):
	dia="quinta"
elif(h==5):
	dia="sexta"
elif(h==6):
	dia="sabado"
print("Hoje eh",dia,"e o dia futuro eh",h)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 38, in <module>
    print("Hoje eh",dia,"e o dia futuro eh",h)
NameError: name 'dia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:27:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= int(input("qual seu numero da semana?"))
y= int(input("qual seu dia do futuro? "))
s=x+y
h=s%7
if(x!=0 and x!=1 and x!=2 and x!=3 and x!=4 and x!=5 and x!=6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	dia="domingo"
elif (x==1):
	dia="segunda"
elif(x==2):
	dia="terca"
elif(x==3):
	dia="quarta"
elif(x==4):
	dia="quinta"
elif(x==5):
	dia="sexta"
elif(x==6):
	dia="sabado"
elif (h==0):
	diaf="domingo"
elif (h==1):
	diaf="segunda"
elif(h==2):
	diaf="terca"
elif(h==3):
	diaf="quarta"
elif(h==4):
	diaf="quinta"
elif(h==5):
	diaf="sexta"
elif(h==6):
	diaf="sabado"
print("Hoje eh",dia,"e o dia futuro eh",diaf)



-- EXECUTION TIME:
0.186594
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1107/main.py", line 38, in <module>
    print("Hoje eh",dia,"e o dia futuro eh",diaf)
NameError: name 'dia' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:27:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= int(input("qual seu numero da semana?"))
y= int(input("qual seu dia do futuro? "))
s=x+y
h=s%7
if(x!=0 and x!=1 and x!=2 and x!=3 and x!=4 and x!=5 and x!=6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	dia="domingo"
elif (x==1):
	dia="segunda"
elif(x==2):
	dia="terca"
elif(x==3):
	dia="quarta"
elif(x==4):
	dia="quinta"
elif(x==5):
	dia="sexta"
elif(x==6):
	dia="sabado"
elif (h==0):
	diaf="domingo"
elif (h==1):
	diaf="segunda"
elif(h==2):
	diaf="terca"
elif(h==3):
	diaf="quarta"
elif(h==4):
	diaf="quinta"
elif(h==5):
	diaf="sexta"
elif(h==6):
	diaf="sabado"
print("Hoje eh",dia,"e o dia futuro eh",diaf)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 38, in <module>
    print("Hoje eh",dia,"e o dia futuro eh",diaf)
NameError: name 'dia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:29:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= int(input("qual seu numero da semana?"))
y= int(input("qual seu dia do futuro? "))
s=x+y
h=s%7
if(x!=0 and x!=1 and x!=2 and x!=3 and x!=4 and x!=5 and x!=6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	dia="domingo"
elif (x==1):
	dia="segunda"
elif(x==2):
	dia="terca"
elif(x==3):
	dia="quarta"
elif(x==4):
	dia="quinta"
elif(x==5):
	dia="sexta"
elif(x==6):
	dia="sabado"
elif (h==0):
	diaf="domingo"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif (h==1):
	diaf="segunda"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==2):
	diaf="terca"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==3):
	diaf="quarta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==4):
	diaf="quinta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==5):
	diaf="sexta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf
elif(h==6):
	diaf="sabado"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)



-- ERROR:
File "XXXX", line 42
    elif(h==6):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:29:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= int(input("qual seu numero da semana?"))
y= int(input("qual seu dia do futuro? "))
s=x+y
h=s%7
if(x!=0 and x!=1 and x!=2 and x!=3 and x!=4 and x!=5 and x!=6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	dia="domingo"
elif (x==1):
	dia="segunda"
elif(x==2):
	dia="terca"
elif(x==3):
	dia="quarta"
elif(x==4):
	dia="quinta"
elif(x==5):
	dia="sexta"
elif(x==6):
	dia="sabado"
elif (h==0):
	diaf="domingo"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif (h==1):
	diaf="segunda"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==2):
	diaf="terca"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==3):
	diaf="quarta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==4):
	diaf="quinta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==5):
	diaf="sexta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==6):
	diaf="sabado"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)



-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:30:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= int(input("qual seu numero da semana?"))
y= int(input("qual seu dia do futuro? "))
s=x+y
h=s%7
if(x!=0 and x!=1 and x!=2 and x!=3 and x!=4 and x!=5 and x!=6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	dia="domingo"
elif (x==1):
	dia="segunda"
elif(x==2):
	dia="terca"
elif(x==3):
	dia="quarta"
elif(x==4):
	dia="quinta"
elif(x==5):
	dia="sexta"
elif(x==6):
	dia="sabado"
elif (h==0):
	diaf="domingo"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif (h==1):
	diaf="segunda"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==2):
	diaf="terca"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==3):
	diaf="quarta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==4):
	diaf="quinta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==5):
	diaf="sexta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==6):
	diaf="sabado"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)



-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:31:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= int(input("qual seu numero da semana?"))
y= int(input("qual seu dia do futuro? "))
s=x+y
h=s%7
if(x!=0 and x!=1 and x!=2 and x!=3 and x!=4 and x!=5 and x!=6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	dia="domingo"
elif (x==1):
	dia="segunda"
elif(x==2):
	dia="terca"
elif(x==3):
	dia="quarta"
elif(x==4):
	dia="quinta"
elif(x==5):
	dia="sexta"
elif(x==6):
	dia="sabado"
elif (h==0):
	diaf="domingo"
print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif (h==1):
	diaf="segunda"
print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==2):
	diaf="terca"
print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==3):
	diaf="quarta"
print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==4):
	diaf="quinta"
print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==5):
	diaf="sexta"
print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==6):
	diaf="sabado"
print("Hoje eh",dia,"e o dia futuro eh",diaf)



-- ERROR:
File "XXXX", line 27
    elif (h==1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:34:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= int(input("qual seu numero da semana?"))
y= int(input("qual seu dia do futuro? "))
s=x+y
if(s>=6):
	h=s%7
else:
if(x!=0 and x!=1 and x!=2 and x!=3 and x!=4 and x!=5 and x!=6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	dia="domingo"
elif (x==1):
	dia="segunda"
elif(x==2):
	dia="terca"
elif(x==3):
	dia="quarta"
elif(x==4):
	dia="quinta"
elif(x==5):
	dia="sexta"
elif(x==6):
	dia="sabado"

	
if (h==0):
	diaf="domingo"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif (h==1):
	diaf="segunda"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==2):
	diaf="terca"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==3):
	diaf="quarta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==4):
	diaf="quinta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==5):
	diaf="sexta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==6):
	diaf="sabado"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)



-- EXECUTION TIME:
0.217615
-- ERROR:
  File "/home/codebench/codes/1674/1107/main.py", line 10
    if(x!=0 and x!=1 and x!=2 and x!=3 and x!=4 and x!=5 and x!=6):
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:34:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= int(input("qual seu numero da semana?"))
y= int(input("qual seu dia do futuro? "))
s=x+y
if(s>=6):
	h=s%7
else:
if(x!=0 and x!=1 and x!=2 and x!=3 and x!=4 and x!=5 and x!=6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	dia="domingo"
elif (x==1):
	dia="segunda"
elif(x==2):
	dia="terca"
elif(x==3):
	dia="quarta"
elif(x==4):
	dia="quinta"
elif(x==5):
	dia="sexta"
elif(x==6):
	dia="sabado"

	
if (h==0):
	diaf="domingo"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif (h==1):
	diaf="segunda"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==2):
	diaf="terca"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==3):
	diaf="quarta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==4):
	diaf="quinta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==5):
	diaf="sexta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==6):
	diaf="sabado"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)



-- ERROR:
File "XXXX", line 10
    if(x!=0 and x!=1 and x!=2 and x!=3 and x!=4 and x!=5 and x!=6):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:34:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= int(input("qual seu numero da semana?"))
y= int(input("qual seu dia do futuro? "))
s=x+y
if(s>=6):
	h=s%7
else:
if(x!=0 and x!=1 and x!=2 and x!=3 and x!=4 and x!=5 and x!=6):
	print("A entrada",x,"eh invalida")
elif (x==0):
	dia="domingo"
elif (x==1):
	dia="segunda"
elif(x==2):
	dia="terca"
elif(x==3):
	dia="quarta"
elif(x==4):
	dia="quinta"
elif(x==5):
	dia="sexta"
elif(x==6):
	dia="sabado"

	
if (h==0):
	diaf="domingo"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif (h==1):
	diaf="segunda"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==2):
	diaf="terca"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==3):
	diaf="quarta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==4):
	diaf="quinta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==5):
	diaf="sexta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==6):
	diaf="sabado"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)



-- ERROR:
File "XXXX", line 10
    if(x!=0 and x!=1 and x!=2 and x!=3 and x!=4 and x!=5 and x!=6):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:37:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= int(input("qual seu numero da semana?"))
y= int(input("qual seu dia do futuro? "))
s=x+y
if(s>=6):
	h=s%7
else:
	h= s
if (h==0):
	dia="domingo"
elif (h==1):
	dia="segunda"
elif(h==2):
	dia="terca"
elif(h==3):
	dia="quarta"
elif(h==4):
	dia="quinta"
elif(h==5):
	dia="sexta"
elif(h==6):
	dia="sabado"

if not(0<=x<=6):
	print("A entrada", a, "eh invalida")
if (h==0):
	diaf="domingo"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif (h==1):
	diaf="segunda"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==2):
	diaf="terca"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==3):
	diaf="quarta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==4):
	diaf="quinta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==5):
	diaf="sexta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(h==6):
	diaf="sabado"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 27, in <module>
    print("A entrada", a, "eh invalida")
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:38:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= int(input("qual seu numero da semana?"))
y= int(input("qual seu dia do futuro? "))
s=x+y
if(s>=6):
	h=s%7
else:
	h= s
if (h==0):
	dia="domingo"
elif (h==1):
	dia="segunda"
elif(h==2):
	dia="terca"
elif(h==3):
	dia="quarta"
elif(h==4):
	dia="quinta"
elif(h==5):
	dia="sexta"
elif(h==6):
	dia="sabado"

if not(0<=x<=6):
	print("A entrada", a, "eh invalida")
if (x==0):
	diaf="domingo"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif (x==1):
	diaf="segunda"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(x==2):
	diaf="terca"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(x==3):
	diaf="quarta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(x==4):
	diaf="quinta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(x==5):
	diaf="sexta"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)
elif(x==6):
	diaf="sabado"
	print("Hoje eh",dia,"e o dia futuro eh",diaf)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 27, in <module>
    print("A entrada", a, "eh invalida")
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:38:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= int(input("qual seu numero da semana?"))
y= int(input("qual seu dia do futuro? "))
s=x+y
if(s>=6):
	h=s%7
else:
	h= s
if (h==0):
	dia="domingo"
elif (h==1):
	dia="segunda"
elif(h==2):
	dia="terca"
elif(h==3):
	dia="quarta"
elif(h==4):
	dia="quinta"
elif(h==5):
	dia="sexta"
elif(h==6):
	dia="sabado"

if not(0<=x<=6):
	print("A entrada", a, "eh invalida")
if (x==0):
	diaf="domingo"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif (x==1):
	diaf="segunda"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif(x==2):
	diaf="terca"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif(x==3):
	diaf="quarta"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif(x==4):
	diaf="quinta"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif(x==5):
	diaf="sexta"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif(x==6):
	diaf="sabado"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)



-- EXECUTION TIME:
0.202667
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1107/main.py", line 27, in <module>
    print("A entrada", a, "eh invalida")
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:38:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= int(input("qual seu numero da semana?"))
y= int(input("qual seu dia do futuro? "))
s=x+y
if(s>=6):
	h=s%7
else:
	h= s
if (h==0):
	dia="domingo"
elif (h==1):
	dia="segunda"
elif(h==2):
	dia="terca"
elif(h==3):
	dia="quarta"
elif(h==4):
	dia="quinta"
elif(h==5):
	dia="sexta"
elif(h==6):
	dia="sabado"

if not(0<=x<=6):
	print("A entrada", a, "eh invalida")
if (x==0):
	diaf="domingo"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif (x==1):
	diaf="segunda"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif(x==2):
	diaf="terca"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif(x==3):
	diaf="quarta"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif(x==4):
	diaf="quinta"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif(x==5):
	diaf="sexta"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif(x==6):
	diaf="sabado"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 27, in <module>
    print("A entrada", a, "eh invalida")
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:39:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= int(input("qual seu numero da semana?"))
y= int(input("qual seu dia do futuro? "))
s=x+y
if(s>=6):
	h=s%7
else:
	h= s
if (h==0):
	dia="domingo"
elif (h==1):
	dia="segunda"
elif(h==2):
	dia="terca"
elif(h==3):
	dia="quarta"
elif(h==4):
	dia="quinta"
elif(h==5):
	dia="sexta"
elif(h==6):
	dia="sabado"

if not(0<=x<=6):
	print("A entrada", a, "eh invalida")
if (x==0):
	diaf="domingo"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif (x==1):
	diaf="segunda"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif(x==2):
	diaf="terca"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif(x==3):
	diaf="quarta"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif(x==4):
	diaf="quinta"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif(x==5):
	diaf="sexta"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif(x==6):
	diaf="sabado"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 27, in <module>
    print("A entrada", a, "eh invalida")
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:39:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= int(input("qual seu numero da semana?"))
y= int(input("qual seu dia do futuro? "))
s=x+y
if(s>=6):
	h=s%7
else:
	h= s
if (h==0):
	dia="domingo"
elif (h==1):
	dia="segunda"
elif(h==2):
	dia="terca"
elif(h==3):
	dia="quarta"
elif(h==4):
	dia="quinta"
elif(h==5):
	dia="sexta"
elif(h==6):
	dia="sabado"

if not(0<=x<=6):
	print("A entrada", x, "eh invalida")
if (x==0):
	diaf="domingo"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif (x==1):
	diaf="segunda"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif(x==2):
	diaf="terca"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif(x==3):
	diaf="quarta"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif(x==4):
	diaf="quinta"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif(x==5):
	diaf="sexta"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)
elif(x==6):
	diaf="sabado"
	print("Hoje eh",diaf,"e o dia futuro eh",dia)



-- EXECUTION TIME:
0.185706
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
